Fixed bug #42183 (classmap cause crashr in non-wsdl mode)